--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <br>
 Note: The bot is currently in a WIP state.</p>
 <br>
+<md-filled-button onclick=window.location.href='https://discord.com/oauth2/authorize?client_id=1213582843981070486&permissions=412317248512&scope=applications.commands+bot';>Invite the Bot</md-filled-button>
 <md-filled-button onclick=window.location.href='https://github.com/netcord-team/netcord';>GitHub</md-filled-button>
 </body>
 </html>
