--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
 <body>
 <h1>Netcord</h1>
 <h3>A versatile IRC bot for Discord.</h3>
-<h4>warning: may not be stable and is constantly being worked on, so proceed with caution!</h4>
 <br>
 <h3>Info:</h3>
 <p>Netcord is a Discord bot for seamless 24/7 cross-server chatting. Think of it as a userphone that runs 24/7. We will also add chatting between multiple platfroms later on.
 <br>
-Note: The bot is currently in a WIP state.</p>
+The bot reached stable release, you can check out by inviting it on your discord server or by <a href="https://github.com/netcord-team/netcord/wiki/Hosting-your-own-Netcord-instance">self-hosting it</a></p>
 <br>
 <md-filled-button onclick=window.location.href='https://discord.com/oauth2/authorize?client_id=1213582843981070486&permissions=412317248512&scope=applications.commands+bot';>Invite the Bot</md-filled-button>
 <md-filled-button onclick=window.location.href='https://github.com/netcord-team/netcord';>GitHub</md-filled-button>
